deploy/new/base/allinone-miner/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: miner
  namespace: miner
  labels:
    app: miner
    project: miner
spec:
  replicas: 1
  selector:
    matchLabels:
      app: miner
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: miner
    spec:
      serviceAccountName: s3-push-service-account
      # affinity to attempt as much as possible not to schedule same instance types on the same k8s host/node
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app: miner
                topologyKey: "kubernetes.io/hostname"
      containers:
        - name: miner
          image: 434394763103.dkr.ecr.eu-north-1.amazonaws.com/IMAGE:TAG
          #          command: [ "./dlv", "--listen=:4040", "--continue", "--accept-multiclient", "--headless=true", "--api-version=2", "exec", "./ubsv.run", "--" ]
          args: [ ]
          ports:
            - containerPort: 4040
              protocol: TCP
            - containerPort: 8084
              protocol: TCP
            - containerPort: 8087
              protocol: TCP
            - containerPort: 8090
              protocol: TCP
            - containerPort: 8091
              protocol: TCP
            - containerPort: 9091
              protocol: TCP
            - containerPort: 9095
              protocol: TCP
          resources:
            requests:
              memory: 12Gi
              cpu: "6"
            limits:
              memory: 12Gi
              cpu: "6"
          readinessProbe:
            httpGet:
              path: /health
              port: 9091
            initialDelaySeconds: 5
            periodSeconds: 10
            failureThreshold: 5
            timeoutSeconds: 3
          livenessProbe:
            httpGet:
              path: /health
              port: 9091
            initialDelaySeconds: 5
            periodSeconds: 10
            failureThreshold: 5
            timeoutSeconds: 3
