deploy/new/base/allinone-miner/blob-http-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: miner-ingressroute-https
spec:
  entryPoints:
    - websecure
  routes:
  - match: HostSNI(`miner.allinone-miner.ubsv.dev`)
    services:
    - name: miner
      port: 8090
  tls:
    passthrough: true
