deploy/new/base/allinone-miner/propagation-grpc-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: miner-ingressroute-tcp-8084
spec:
  entryPoints:
    - prop-grpc
  routes:
  - match: HostSNI(`miner.allinone-miner.ubsv.dev`)
    services:
    - name: miner
      port: 8084
  tls:
    passthrough: true
